exports[`<app /> snapshot 1`] = `
<div
  className="app">
  <div
    className="header clearfix">
    <div
      className="header-left clearfix">
      <span
        className="icon icon-logo" />
      <span
        className="tit">
        Star
      </span>
    </div>
    <div
      className="user-center "
      onClick={[Function]}>
      <div
        className="user-icon clearfix">
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-user" />
      </div>
      <ul
        className="user-list hidden">
        <li
          onClick={[Function]}>
          <span
            className="icon icon-alter" />
          修改密码
        </li>
        <li
          onClick={[Function]}>
          <span
            className="icon icon-exit" />
          退出管理系统
        </li>
      </ul>
    </div>
    <div
      className="header-right clearfix">
      <span
        className="name">
        智慧照明
      </span>
    </div>
  </div>
  <div
    className="cont">
    <ul
      className="clearfix">
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-asset">
            <div
              className="ico">
              <span
                className="icon icon-asset" />
            </div>
            <div
              className="title">
              资产管理
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-permission">
            <div
              className="ico">
              <span
                className="icon icon-permission" />
            </div>
            <div
              className="title">
              权限管理
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="overlayer "
    onClick={[Function]}>
    <div
      className=""
      id="animate" />
  </div>
</div>
`;

exports[`<app /> snapshot with props.title=undefined, props.name=undefined 1`] = `
<div
  className="app">
  <div
    className="header clearfix">
    <div
      className="header-left clearfix">
      <span
        className="icon icon-logo" />
      <span
        className="tit">
        StarRiver
      </span>
    </div>
    <div
      className="user-center "
      onClick={[Function]}>
      <div
        className="user-icon clearfix">
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-user" />
      </div>
      <ul
        className="user-list hidden">
        <li
          onClick={[Function]}>
          <span
            className="icon icon-alter" />
          修改密码
        </li>
        <li
          onClick={[Function]}>
          <span
            className="icon icon-exit" />
          退出管理系统
        </li>
      </ul>
    </div>
    <div
      className="header-right clearfix">
      <span
        className="name">
        智慧路灯管理系统
      </span>
    </div>
  </div>
  <div
    className="cont">
    <ul
      className="clearfix">
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-asset">
            <div
              className="ico">
              <span
                className="icon icon-asset" />
            </div>
            <div
              className="title">
              资产管理
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          onClick={[Function]}
          style={Object {}}>
          <div
            className="card card-permission">
            <div
              className="ico">
              <span
                className="icon icon-permission" />
            </div>
            <div
              className="title">
              权限管理
            </div>
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="overlayer "
    onClick={[Function]}>
    <div
      className=""
      id="animate" />
  </div>
</div>
`;
